--- a/Pandas_pivot_table.ipynb
+++ b/Pandas_pivot_table.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Pandas_pivot_table.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMPN4PPRt6NI2q71dnF7rLV",
+      "authorship_tag": "ABX9TyPs5qA77CwvPzIVmZadN+Ov",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,284 @@
       "cell_type": "code",
       "metadata": {
         "id": "x_PgXi4Avc_l"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "df = pd.read_csv('/content/sample_data/sample dataset office.csv')"
+      ],
+      "execution_count": 50,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6aAdG84lwIiv"
+      },
+      "source": [
+        "df['Total'] = df['Total'].astype(str).str.replace(\",\", \"\").astype(float)\n",
+        "df_new=df.set_index('Rep').groupby(level=0)['Total'].agg(np.nansum)\n"
+      ],
+      "execution_count": 72,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OKl_HonN2JWa"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 67,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ki_PMcyZwPlm",
+        "outputId": "b0dbc023-c7b8-40de-b2bd-ac4aa6ccb7ab"
+      },
+      "source": [
+        "df_new = pd.cut(df_new, 3, labels=[\"low\", \"medium\", \"high\"])\n",
+        "df_new.head()"
+      ],
+      "execution_count": 73,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Rep\n",
+              "Andrews       low\n",
+              "Gill       medium\n",
+              "Howard        low\n",
+              "Jardine      high\n",
+              "Jones        high\n",
+              "Name: Total, dtype: category\n",
+              "Categories (3, object): ['low' < 'medium' < 'high']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 73
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z16tffvKwkmg"
+      },
+      "source": [
+        "rep_frame=df_new.to_frame()"
+      ],
+      "execution_count": 75,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 421
+        },
+        "id": "0X1UUYip1NU1",
+        "outputId": "4784d598-41ad-4cef-b311-237377ac1d83"
+      },
+      "source": [
+        "rep_frame"
+      ],
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Total</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Rep</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Andrews</th>\n",
+              "      <td>low</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Gill</th>\n",
+              "      <td>medium</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Howard</th>\n",
+              "      <td>low</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Jardine</th>\n",
+              "      <td>high</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Jones</th>\n",
+              "      <td>high</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Kivell</th>\n",
+              "      <td>high</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Morgan</th>\n",
+              "      <td>medium</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Parent</th>\n",
+              "      <td>high</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Smith</th>\n",
+              "      <td>medium</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Sorvino</th>\n",
+              "      <td>low</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Thompson</th>\n",
+              "      <td>low</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "           Total\n",
+              "Rep             \n",
+              "Andrews      low\n",
+              "Gill      medium\n",
+              "Howard       low\n",
+              "Jardine     high\n",
+              "Jones       high\n",
+              "Kivell      high\n",
+              "Morgan    medium\n",
+              "Parent      high\n",
+              "Smith     medium\n",
+              "Sorvino      low\n",
+              "Thompson     low"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 81
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "np4ZVr9t1O83"
+      },
+      "source": [
+        "df=df.merge(rep_frame, left_index=True, right_index=True)"
+      ],
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 69
+        },
+        "id": "nKqWBlVW4I_y",
+        "outputId": "f32d33b3-7f14-45ef-cc8e-5da395279368"
+      },
+      "source": [
+        "df.head()"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>OrderDate</th>\n",
+              "      <th>Region</th>\n",
+              "      <th>Rep</th>\n",
+              "      <th>Item</th>\n",
+              "      <th>Units</th>\n",
+              "      <th>UnitCost</th>\n",
+              "      <th>Total_x</th>\n",
+              "      <th>rep_rating</th>\n",
+              "      <th>rep_cat</th>\n",
+              "      <th>Total_y</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "Empty DataFrame\n",
+              "Columns: [OrderDate, Region, Rep, Item, Units, UnitCost, Total_x, rep_rating, rep_cat, Total_y]\n",
+              "Index: []"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 79
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xyLBlSpM4KYY"
       },
       "source": [
         ""
